--- a/nginx.conf
+++ b/nginx.conf
@@ -1,33 +1,50 @@
+# HTTP 요청을 HTTPS로 리다이렉트
 server {
     listen 80;
     server_name rs-nova.co.kr;
     root /var/www/html;
-    
+
+    # Let's Encrypt 인증서 갱신을 위한 경로
     location /.well-known/acme-challenge/ {
         root /var/www/html;
     }
 
+    # 모든 HTTP 요청을 HTTPS로 리다이렉트
     location / {
-        proxy_pass http://orummmedia_front;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        return 301 https://$host$request_uri;
     }
 }
 
+# HTTPS 요청 처리
 server {
     listen 443 ssl;
     server_name rs-nova.co.kr;
 
-    ssl_certificate /etc/letsencrypt/live/your-domain.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/your-domain.com/privkey.pem;
+    # SSL 인증서와 키 파일 경로
+    ssl_certificate /etc/letsencrypt/live/rs-nova.co.kr/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/rs-nova.co.kr/privkey.pem;
 
+    # SSL 설정 (필요에 따라 추가 보안 설정 가능)
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256:TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384';
+    ssl_prefer_server_ciphers on;
+
+    root /usr/share/nginx/html;
+
+    # 리액트 앱의 정적 파일 제공을 위한 설정
     location / {
-        proxy_pass http://orummmedia_front;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        try_files $uri /index.html;
+        # or use proxy_pass if forwarding requests to another service
+        # proxy_pass http://orummmedia_front;
+        # proxy_set_header Host $host;
+        # proxy_set_header X-Real-IP $remote_addr;
+        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # proxy_set_header X-Forwarded-Proto $scheme;
     }
+
+    # 리액트 앱의 정적 파일 제공을 위한 설정
+    location /static/ {
+        alias /usr/share/nginx/html/static/;
+    }
+
 }
