--- a/nginx.conf
+++ b/nginx.conf
@@ -2,12 +2,11 @@
 server {
     listen 80;
     server_name rs-nova.co.kr;
-    root /var/www/html;
 
-    # Let's Encrypt 인증서 갱신을 위한 경로
     location /.well-known/acme-challenge/ {
-        root /var/www/html;
-    }
+             allow all;
+             root /var/www/certbot;
+     } 
 
     # 모든 HTTP 요청을 HTTPS로 리다이렉트
     location / {
@@ -33,7 +32,7 @@ server {
 
     # 리액트 앱의 정적 파일 제공을 위한 설정
     location / {
-        try_files $uri /index.html;
+	      try_files $uri $uri/ /index.html;
         # or use proxy_pass if forwarding requests to another service
         # proxy_pass http://orummmedia_front;
         # proxy_set_header Host $host;
